RESOLVED FIXED124857
RenderTableSection Blink merge asserting
https://bugs.webkit.org/show_bug.cgi?id=124857
Summary RenderTableSection Blink merge asserting
Dean Jackson
Reported 2013-11-25 13:29:52 PST
https://bugs.webkit.org/show_bug.cgi?id=20040 has caused two tests to crash, at least on Mountain Lion tables/mozilla/bugs/bug46268-3.html tables/mozilla_expected_failures/bugs/bug46268-4.html http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK2%20(Tests)/r159753%20(14410)/results.html
Attachments
Patch (1.43 KB, patch)
2013-11-28 09:19 PST, Laszlo Vidacs
no flags
Patch (2.77 KB, patch)
2013-11-28 09:31 PST, Laszlo Vidacs
no flags
Dean Jackson
Comment 1 2013-11-25 13:34:01 PST
Csaba Osztrogonác
Comment 2 2013-11-25 13:56:15 PST
Ouch, sorry for the trouble. Unfortunately we haven't noticed it in time because of broken debug tester bots (https://bugs.webkit.org/show_bug.cgi?id=124845) We'll check this regression soon.
Laszlo Vidacs
Comment 3 2013-11-28 09:19:42 PST
Laszlo Vidacs
Comment 4 2013-11-28 09:31:13 PST
Csaba Osztrogonác
Comment 5 2013-11-28 09:36:42 PST
Comment on attachment 218006 [details] Patch Good catch, r=me. Unfortunately we need a massive rebaseline again, but the bug will be really fixed.
Csaba Osztrogonác
Comment 6 2013-11-28 09:38:24 PST
Comment on attachment 218006 [details] Patch Clearing flags on attachment: 218006 Committed r159848: <http://trac.webkit.org/changeset/159848>
Csaba Osztrogonác
Comment 7 2013-11-28 09:38:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.