RenderTableSection Blink merge asserting https://bugs.webkit.org/show_bug.cgi?id=124857

Patch by Laszlo Vidacs <lac@inf.u-szeged.hu> on 2013-11-28
Reviewed by Csaba Osztrogonác.

Source/WebCore:

Use border spacing at the end of all sections.

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::calcRowLogicalHeight):

LayoutTests:

Skipped tests enabled.

* TestExpectations:

Canonical link: https://commits.webkit.org/143099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159848 268f45cc-cd09-0410-ab3c-d52691b4dbfc